Add namespace permissions to config